<resources>
    <string name="app_name">cleanse</string>
    <string name="login">登陆</string>
    <string name="server_list">服务器列表</string>
    <string name="name_notice">名称：</string>
    <string name="ip_notice">IP地址：</string>
    <string name="current_location">导航状态</string>
    <string name="NA">N/A</string>
    <string name="manualMode">手动模式</string>
    <string name="automaticMode">自动模式</string>
    <string name="singlePointNav">单点导航模式</string>
    <string name="notice_switch_upper_computer">上位机开关:</string>
    <string name="map_select">地图选择</string>
    <string name="task">任务</string>
    <string name="start_task">开始路径</string>
    <string name="empty_notice">账号或密码不可以为空</string>
    <string name="error_login">用户名或密码错误请重新输入</string>
    <string name="isCleanse">是否消毒</string>
    <string name="add">添加</string>
    <string name="path_end">完成编辑</string>
    <string name="input_path_name">请输入路径名称</string>
    <string name="ensure">确定</string>
    <string name="cancel">取消</string>
    <string name="current_task">当前任务</string>
    <string name="timeKeeper">停留时间(S)</string>
    <string name="connstatus">连接状态</string>
    <string name="pos_status">定位状态</string>
    <string name="nothing">无</string>
    <string name="recorder">工作日志</string>
    <string name="path">路径</string>
    <string name="start_date">开始时间</string>
    <string name="end_date">结束时间</string>
    <string name="angel">选择导航点角度</string>
</resources>
