<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="200dp"
    android:layout_height="267dp"
    android:background="@drawable/dialog_named_background">


    <EditText
        android:id="@+id/et_task_named"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginLeft="29dp"
        android:layout_marginRight="29dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/edittext_named_back"
        android:gravity="center_vertical"
        android:hint="@string/input_path_name"
        android:paddingLeft="10dp"
        android:textColor="#ababab"
        android:textSize="9sp" />

    <Button
        android:id="@+id/btn_sure"
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="34dp"
        android:layout_marginLeft="17dp"
        android:background="@drawable/btn_named_dialog_normal"
        android:padding="5dp"
        android:text="@string/ensure"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_12sp" />


    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="34dp"
        android:layout_marginRight="17dp"
        android:background="@drawable/btn_named_dialog_normal"
        android:padding="5dp"
        android:text="@string/cancel"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_12sp" />


</RelativeLayout>

