<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_task_recorder" />

    <RelativeLayout
        android:id="@+id/indicatorLayout"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_below="@+id/toolbar"
        android:paddingLeft="40dp"
        android:paddingRight="40dp">

        <!-- 路径指示 -->
        <TextView
            android:id="@+id/indicate_path"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/path"
            android:textColor="@color/colorIndicator"
            android:textSize="@dimen/text_size_17sp" />


        <!-- 路径指示 -->
        <TextView
            android:id="@+id/indicate_start_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/start_date"
            android:textColor="@color/colorIndicator"
            android:textSize="@dimen/text_size_17sp" />


        <!-- 路径指示 -->
        <TextView
            android:id="@+id/indicate_end_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/end_date"
            android:textColor="@color/colorIndicator"
            android:textSize="@dimen/text_size_17sp" />

    </RelativeLayout>

    <View
        android:id="@+id/div_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/indicatorLayout"
        android:background="@color/colorDiviLine" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_task_recorder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/div_line"
        />


</RelativeLayout>